clan loading fixes, client changes and command handling improvements

--- a/clans/src/main/resources/plugin.yml
+++ b/clans/src/main/resources/plugin.yml
@@ -1,7 +1,9 @@
 author: Mykindos
 main: me.mykindos.betterpvp.clans.Clans
 name: Clans
-load: postworld
+load: STARTUP
 version: '1.0'
 depend: [Core]
 api-version: 1.19
+softdepend:
+  - ProtocolLib
