--- a/clans/src/main/resources/plugin.yml
+++ b/clans/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 author: Mykindos
 main: me.mykindos.betterpvp.clans.Clans
 name: Clans
-load: STARTUP
+load: POSTWORLD
 version: '1.0'
 depend: [Core]
 api-version: 1.19
