--- a/texturepack/manifest.json
+++ b/texturepack/manifest.json
@@ -1,14 +1,14 @@
 {
   "header": {
-    "pack_id": "91544175-6c2f-4f75-96d8-7db32ebae7d6",
-    "name": "BetterPvP",
-    "packs_version": "1.0.1",
-    "description": "BetterPvP resource pack",
+    "pack_id": "9151e175-6d7f-4f75-96d8-7dbd1ebae7d6",
+    "name": "Shield Corrections §c[Colored]",
+    "packs_version": "vr1.0.1",
+    "description": "For fixing broken patterns and lowering Shield",
     "modules": [
       {
-        "description": "Legendaries and more",
-        "version": "1.0.2",
-        "uuid": "0d522d40-38d5-4a41-b2e4-5d2e3b3fd0af4",
+        "description": "For fixing broken patterns and lowering Shield by D3SG4MER24",
+        "version": "vr1.0.2",
+        "uuid": "0d5cfd40-38d5-4a66-b2e4-5d2e3b7d0af4",
         "type": "resources"
       }
     ]
