add max level to archery skill

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -28,6 +28,9 @@ skills:
     silencingstrikes:
       enabled: true
       maxlevel: 3
+    archery:
+      enabled: true
+      maxlevel: 3
     repeatedstrikes:
       enabled: true
       maxlevel: 3
