added level field to config

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -77,6 +77,9 @@ skills:
     fortitude:
       enabled: true
       maxlevel: 3
+    levelfield:
+      enabled: true
+      maxlevel: 3
     cleave:
       enabled: true
       maxlevel: 3
