--- a/champions/src/main/resources/plugin.yml
+++ b/champions/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ name: Champions
 load: STARTUP
 version: '1.0'
 depend: [Core]
-api-version: 1.19
+api-version: '1.20'
 softdepend:
   - ProtocolLib
   - LibsDisguises
