--- a/clans/src/main/resources/plugin.yml
+++ b/clans/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ name: Clans
 load: POSTWORLD
 version: '1.0'
 depend: [Core]
-api-version: 1.19
+api-version: '1.20'
 softdepend:
   - ProtocolLib
   - LibsDisguises
