--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: me.mykindos.betterpvp.core.Core
 name: Core
 load: STARTUP
 version: '1.0'
-api-version: 1.19
+api-version: '1.20'
 depend:
   - ProtocolLib
 softdepend:
