--- a/lunar/src/main/resources/plugin.yml
+++ b/lunar/src/main/resources/plugin.yml
@@ -3,6 +3,6 @@ main: me.mykindos.betterpvp.lunar.LunarClientAPI
 name: Lunar
 load: STARTUP
 version: '1.0'
-api-version: 1.19
+api-version: '1.20'
 depend: [Core]
 website: https://www.lunarclient.com/
