--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -25,6 +25,11 @@ skills:
       enabled: true
       maxlevel: 5
       cooldown: 15
+    smokearrow:
+      enabled: true
+      maxlevel: 4
+      cooldown: 20
+      baseDuration: 3.0
     silencingstrikes:
       enabled: true
       maxlevel: 3
