--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -75,6 +75,11 @@ skills:
       cooldown: 2
       energy: 6
   knight:
+    shieldsmash:
+      enabled: true
+      maxlevel: 5
+      cooldown: 15
+      baseMultiplier: 1.6
     bullscharge:
       enabled: true
       cooldown: 14
