--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -296,6 +296,7 @@ skills:
       maxlevel: 4
       cooldown: 8
       baseCharge: 40.0
+      baseDamage: 2.0
     stunningshot:
       enabled: true
       maxlevel: 5
