added vengeance to config

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -111,6 +111,9 @@ skills:
     fury:
       enabled: true
       maxlevel: 3
+    vengeance:
+      enabled: true
+      maxlevel: 5
     thorns:
       enabled: true
       maxlevel: 3
