--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -21,6 +21,11 @@ skills:
       enabled: true
       cooldown: 50
       maxlevel: 5
+    Usurper:
+      enabled: true
+      cooldown: 30
+      maxlevel: 5
+      baseDuration: 1.0
     silencingarrow:
       enabled: true
       maxlevel: 5
