renamed skill and made it a little simpler

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -21,7 +21,7 @@ skills:
       enabled: true
       cooldown: 50
       maxlevel: 5
-    Usurper:
+    finalgambit:
       enabled: true
       cooldown: 30
       maxlevel: 5
