--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -14,6 +14,10 @@ skills:
     shockingstrikes:
       enabled: true
       maxlevel: 3
+    viperstrikes:
+      enabled: true
+      maxlevel: 3
+      baseSeconds: 2.0
     backstab:
       enabled: true
       maxlevel: 5
