--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -54,6 +54,13 @@ skills:
       cooldown: 13
       maxlevel: 5
       maxTravelDistance: 16
+    revival:
+      enabled: true
+      maxlevel: 3
+      cooldown: 35.0
+      percentHealthRecovered: 25.0
+      baseDuration: 0.5
+      effectDuration: 5.0
     flash:
       enabled: true
       maxlevel: 5
