made illusion first draft

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -54,6 +54,11 @@ skills:
       cooldown: 13
       maxlevel: 5
       maxTravelDistance: 16
+    illusion:
+      enabled: true
+      cooldown: 25
+      maxlevel: 3
+      baseDuration: 3.0
     flash:
       enabled: true
       maxlevel: 5
