--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -58,6 +58,7 @@ skills:
       enabled: true
       maxlevel: 3
       cooldown: 25
+      effectDuration: 5.0
     flash:
       enabled: true
       maxlevel: 5
