created vengeance ability and tested

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -97,6 +97,10 @@ skills:
     fortitude:
       enabled: true
       maxlevel: 3
+    vengeance:
+      enabled: true
+      maxlevel: 3
+      damageIncrease: 0.25
     levelfield:
       enabled: true
       maxlevel: 3
