--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -205,6 +205,12 @@ skills:
       enabled: true
       maxlevel: 5
       energy: 11
+    lifebonds:
+      enabled: true
+      maxlevel: 5
+      energy: 9
+      minRadius: 2.0
+      duration: 2.0
     magmablade:
       enabled: true
       maxlevel: 3
