added heavy arrows from mineplex (with integrated energy system) (#62)
* make heavy arrows

* fixed heavy arrow energy usage

* did pr suggestions

* removed halving of heavy arrow energy

* made heavy arrows not have particles when crouching or having no energy

* modify arrow energy consumption and fix toolyip

* fixed heavy arrows consuming energy while flying + more

* fixed heavy arrow stuff

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -358,6 +358,11 @@ skills:
       maxlevel: 5
       baseDamage: 18.0
       deathMessageThreshold: 40.0
+    heavyarrows:
+      enabled: true
+      maxlevel: 5
+      energy: 20
+      basePushBack: 1.25
     overcharge:
       enabled: true
       maxlevel: 5
