Fix boulder radius

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -167,7 +167,7 @@ skills:
       enabled: true
       cooldown: 25
       maxlevel: 5
-      radius: 5.0
+      baseRadius: 4.0
       baseHeal: 2.0
       baseDamage: 3.0
     inferno:
