--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -77,8 +77,9 @@ skills:
     evade:
       enabled: true
       maxlevel: 5
-      cooldown: 2
-      energy: 6
+      cooldown: 15
+      duration: 1.25
+      internalCD: 1.0
   knight:
     shieldsmash:
       enabled: true
