--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -273,6 +273,10 @@ skills:
       energy: 15
       maxlevel: 5
       cooldown: 0
+    intimidation:
+      enabled: true
+      maxlevel: 3
+      baseRadius: 3.0
     seismicslam:
       enabled: true
       maxlevel: 5
