made sharpshooter have numMisses field

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -400,6 +400,7 @@ skills:
       maxlevel: 3
       maxTimeBetweenShots: 5.0
       maxConsecutiveHits: 4
+      numMisses: 2
     agility:
       enabled: true
       maxlevel: 5
