--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -371,10 +371,12 @@ skills:
       enabled: true
       maxlevel: 5
       energy: 20
-      basePushBack: 1.25
+      basePushBack: 1.1
     overcharge:
       enabled: true
       maxlevel: 5
+      damageIncrement: 1
+      durationIncrement: 0.4
     huntersthrill:
       enabled: true
       maxlevel: 5
