--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -79,6 +79,7 @@ skills:
       maxlevel: 5
       cooldown: 15
       duration: 1.25
+      internalCD: 1.0
   knight:
     shieldsmash:
       enabled: true
