made evade changes on separate branch

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -79,6 +79,8 @@ skills:
       maxlevel: 5
       cooldown: 15
       duration: 1.25
+      internalCD: 0.5
+      forcedDamageDelay: 400
   knight:
     shieldsmash:
       enabled: true
