--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -76,6 +76,8 @@ skills:
       enabled: true
       maxlevel: 5
       cooldown: 30
+      extraHealthRecovered: 2.0
+      markerTiming: 0.5
     evade:
       enabled: true
       maxlevel: 5
