--- a/qodana.yaml
+++ b/qodana.yaml
@@ -36,3 +36,5 @@ include:
   - name: LombokGetterMayBeUsed
   - name: SimplifyOptionalCallChains
   - name: RedundantCast
+exclude:
+  - name: AutoCloseableResource
