--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -26,6 +26,8 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 0.0
+      durationIncreasePerLevel: 1.0
     shockingstrikes:
       enabled: true
       maxlevel: 3
@@ -47,6 +49,9 @@ skills:
       canUseWhileStunned: false
       canUseWhileLevitating: false
       canUseInLiquid: false
+      baseDuration: 2.0
+      durationIncreasePerLevel: 2.0
+      poisonStrength: 1
     backstab:
       enabled: true
       maxlevel: 5
@@ -71,6 +76,7 @@ skills:
       blindDuration: 1.75
       blindRadius: 2.5
       cooldownDecreasePerLevel: 2.5
+      durationIncreasePerLevel: 1.0
     silencingarrow:
       enabled: true
       maxlevel: 5
@@ -82,6 +88,7 @@ skills:
       canUseInLiquid: false
       baseDuration: 3.0
       cooldownDecreasePerLevel: 0.5
+      durationIncreasePerLevel: 1.0
     smokearrow:
       enabled: true
       maxlevel: 4
@@ -93,6 +100,8 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 2.0
+      durationIncreasePerLevel: 1.0
+      slownessStrength: 1
     silencingstrikes:
       enabled: true
       maxlevel: 3
@@ -103,6 +112,8 @@ skills:
       canUseWhileStunned: false
       canUseWhileLevitating: false
       canUseInLiquid: false
+      baseDuration: 0.0
+      durationIncreasePerLevel: 1.0
     comboattack:
       enabled: true
       maxlevel: 3
@@ -124,6 +135,8 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 0.0
+      durationIncreasePerLevel: 1.5
     excessiveforce:
       enabled: true
       cooldown: 16
@@ -134,6 +147,8 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 2.0
+      baseDuration: 3.0
+      durationPerLevel: 0.5
     blink:
       enabled: true
       cooldown: 13
@@ -157,6 +172,7 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       chargeIncreasePerLevel: 1
+      rechargeReductionPerLevel: 0.0
     markedfordeath:
       enabled: true
       maxlevel: 5
@@ -181,6 +197,8 @@ skills:
       canUseInLiquid: false
       baseDuration: 6.0
       cooldownDecreasePerLevel: 1.0
+      durationIncreasePerLevel: 1.0
+      poisonStrength: 2
     recall:
       enabled: true
       maxlevel: 5
@@ -193,6 +211,7 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 2.0
+      durationIncreasePerLevel: 1.0
     evade:
       enabled: true
       maxlevel: 5
@@ -206,6 +225,7 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 1.0
+      internalCooldown: 0.5
   knight:
     shieldsmash:
       enabled: true
@@ -650,7 +670,8 @@ skills:
       canUseWhileStunned: false
       canUseWhileLevitating: false
       canUseInLiquid: false
-      cooldownDecreasePerLevel: 1.0
+      cooldownDecreasePerLevel: 2.0
+      damage: 3.0
     cripplingblow:
       enabled: true
       maxlevel: 3
@@ -660,6 +681,7 @@ skills:
       canUseWhileStunned: false
       canUseWhileLevitating: false
       canUseInLiquid: false
+      baseDuration: 2.0
     fleshhook:
       enabled: true
       maxlevel: 5
@@ -700,6 +722,7 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       damageMultiplier: 2.0
+      maxSpeedStrength: 1
     threateningshout:
       enabled: true
       maxlevel: 5
@@ -712,6 +735,8 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 3.0
+      durationIncreasePerLevel: 2.0
     bloodlust:
       enabled: true
       maxlevel: 5
@@ -723,6 +748,8 @@ skills:
       canUseInLiquid: false
       radius: 15
       maxStacks: 3
+      baseDuration: 5.0
+      durationIncreasePerLevel: 1.0
     resistance:
       enabled: true
       maxlevel: 3
@@ -731,6 +758,7 @@ skills:
       canUseWhileStunned: false
       canUseWhileLevitating: false
       canUseInLiquid: false
+      increasePerLevel: 15
     overwhelm:
       enabled: true
       maxlevel: 3
@@ -739,6 +767,10 @@ skills:
       canUseWhileStunned: false
       canUseWhileLevitating: false
       canUseInLiquid: false
+      bonusDamage: 1.0
+      healthOverTarget: 2.0
+      baseMaxDamage: 0.0
+      maxDamageIncreasePerLevel: 0.5
     spiritofthewolf:
       enabled: true
       maxlevel: 5
@@ -751,6 +783,7 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 1.0
+      speedStrength: 1
     spiritofthebear:
       enabled: true
       maxlevel: 5
@@ -762,7 +795,8 @@ skills:
       canUseWhileStunned: false
       canUseWhileLevitating: false
       canUseInLiquid: false
-      cooldownDecreasePerLevel: 1.0
+      cooldownDecreasePerLevel: 2.0
+      resistanceStrength: 1
     strengthinnumbers:
       enabled: true
       maxlevel: 5
@@ -775,6 +809,9 @@ skills:
       canUseWhileLevitating: false
       canUseInLiquid: false
       cooldownDecreasePerLevel: 1.0
+      baseDuration: 2.0
+      durationIncreasePerLevel: 2.0
+      strengthStrength: 1
   ranger:
     wolfspounce:
       enabled: true
